Adjusted footer CSS Footer content no longer overlaps main content on short screen heights

--- a/css/styles.css
+++ b/css/styles.css
@@ -24,12 +24,25 @@ html {
   padding: 0;
 }
 
-.content-wrapper {
-  width: 100vw;
-  height: 100vh;
+body {
   display: flex;
-  align-items: center;
+  flex-direction: column;
+  height: 100%;
+  min-height: 100vh;
+  min-height: -webkit-fill-available;
+}
+
+html {
+  height: -webkit-fill-available;
+}
+
+.main-content {
+  display: flex;
+  flex-direction: column;
   justify-content: center;
+  align-items: center;
+  flex: 1 0 auto;
+  margin-top: 24px;
 }
 
 .info {
@@ -62,19 +75,17 @@ html {
 .crafted-by {
   display: flex;
   flex-direction: column;
-  position: absolute;
-  bottom: 0;
-  padding: 4px 24px;
+  justify-content: center;
   align-items: center;
+  flex: 0 0 auto;
+  padding: 0 24px;
+  min-height: 72px;
 }
 
 .crafted-by p {
   font-size: 12px;
   color: #999;
 }
-
-/* .cta-btn-cont {
-} */
 
 .cta-button {
   display: flex;
@@ -93,9 +104,21 @@ html {
   border-radius: 3px;
 }
 
+.wrapper {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+
+}
+
 
 /* Responsive Styles */
 @media (min-width: 640px) {
+  .video {
+    width: 560px;
+    height: 315px;
+  }
+
   .tagline {
     font-size: 20px;
   }
